static/generated-parser/treelanParser.js
// Generated from treelan.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var treelanListener = require('./treelanListener').treelanListener;
var grammarFileName = "treelan.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'boolean'", "'byte'", "'break'", "'case'", "'catch'", 
                     "'char'", "'continue'", "'default'", "'do'", "'double'", 
                     "'else'", "'float'", "'for'", "'if'", "'int'", "'join'", 
                     "'list'", "'long'", "'new'", "'node'", "'return'", 
                     "'short'", "'switch'", "'String'", "'while'", "'Tree'", 
                     "'throw'", "'try'", "'void'", "'union'", "'select'", 
                     "'set'", "'group'", "'aggregate'", "'rename'", "'reorder'", 
                     null, null, null, null, null, "'null'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='", 
                     "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", 
                     "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", 
                     "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", 
                     "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", 
                     "'<<='", "'>>='", "'>>>='" ];

var symbolicNames = [ null, "BOOLEAN", "BYTE", "BREAK", "CASE", "CATCH", 
                      "CHAR", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", 
                      "FLOAT", "FOR", "IF", "INT", "JOIN", "LIST", "LONG", 
                      "NEW", "NODE", "RETURN", "SHORT", "SWITCH", "STRING", 
                      "WHILE", "TREE", "THROW", "TRY", "VOID", "UNION", 
                      "SELECT", "SET", "GROUP", "AGGREGATE", "RENAME", "REORDER", 
                      "DECIMAL_LITERAL", "FLOAT_LITERAL", "BOOL_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "NULL_LITERAL", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT", 
                      "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", 
                      "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", 
                      "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", 
                      "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", 
                      "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", 
                      "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER" ];

var ruleNames =  [ "stats", "varDecl", "formalParameters", "formalParameter", 
                   "block", "stat", "parExpr", "expr", "builtinfunction", 
                   "primary", "exprList", "typeType", "literal", "primitiveType", 
                   "complexType" ];

function treelanParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

treelanParser.prototype = Object.create(antlr4.Parser.prototype);
treelanParser.prototype.constructor = treelanParser;

Object.defineProperty(treelanParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

treelanParser.EOF = antlr4.Token.EOF;
treelanParser.BOOLEAN = 1;
treelanParser.BYTE = 2;
treelanParser.BREAK = 3;
treelanParser.CASE = 4;
treelanParser.CATCH = 5;
treelanParser.CHAR = 6;
treelanParser.CONTINUE = 7;
treelanParser.DEFAULT = 8;
treelanParser.DO = 9;
treelanParser.DOUBLE = 10;
treelanParser.ELSE = 11;
treelanParser.FLOAT = 12;
treelanParser.FOR = 13;
treelanParser.IF = 14;
treelanParser.INT = 15;
treelanParser.JOIN = 16;
treelanParser.LIST = 17;
treelanParser.LONG = 18;
treelanParser.NEW = 19;
treelanParser.NODE = 20;
treelanParser.RETURN = 21;
treelanParser.SHORT = 22;
treelanParser.SWITCH = 23;
treelanParser.STRING = 24;
treelanParser.WHILE = 25;
treelanParser.TREE = 26;
treelanParser.THROW = 27;
treelanParser.TRY = 28;
treelanParser.VOID = 29;
treelanParser.UNION = 30;
treelanParser.SELECT = 31;
treelanParser.SET = 32;
treelanParser.GROUP = 33;
treelanParser.AGGREGATE = 34;
treelanParser.RENAME = 35;
treelanParser.REORDER = 36;
treelanParser.DECIMAL_LITERAL = 37;
treelanParser.FLOAT_LITERAL = 38;
treelanParser.BOOL_LITERAL = 39;
treelanParser.CHAR_LITERAL = 40;
treelanParser.STRING_LITERAL = 41;
treelanParser.NULL_LITERAL = 42;
treelanParser.LPAREN = 43;
treelanParser.RPAREN = 44;
treelanParser.LBRACE = 45;
treelanParser.RBRACE = 46;
treelanParser.LBRACK = 47;
treelanParser.RBRACK = 48;
treelanParser.SEMI = 49;
treelanParser.COMMA = 50;
treelanParser.DOT = 51;
treelanParser.ASSIGN = 52;
treelanParser.GT = 53;
treelanParser.LT = 54;
treelanParser.BANG = 55;
treelanParser.TILDE = 56;
treelanParser.QUESTION = 57;
treelanParser.COLON = 58;
treelanParser.EQUAL = 59;
treelanParser.LE = 60;
treelanParser.GE = 61;
treelanParser.NOTEQUAL = 62;
treelanParser.AND = 63;
treelanParser.OR = 64;
treelanParser.INC = 65;
treelanParser.DEC = 66;
treelanParser.ADD = 67;
treelanParser.SUB = 68;
treelanParser.MUL = 69;
treelanParser.DIV = 70;
treelanParser.BITAND = 71;
treelanParser.BITOR = 72;
treelanParser.CARET = 73;
treelanParser.MOD = 74;
treelanParser.ADD_ASSIGN = 75;
treelanParser.SUB_ASSIGN = 76;
treelanParser.MUL_ASSIGN = 77;
treelanParser.DIV_ASSIGN = 78;
treelanParser.AND_ASSIGN = 79;
treelanParser.OR_ASSIGN = 80;
treelanParser.XOR_ASSIGN = 81;
treelanParser.MOD_ASSIGN = 82;
treelanParser.LSHIFT_ASSIGN = 83;
treelanParser.RSHIFT_ASSIGN = 84;
treelanParser.URSHIFT_ASSIGN = 85;
treelanParser.WS = 86;
treelanParser.COMMENT = 87;
treelanParser.LINE_COMMENT = 88;
treelanParser.IDENTIFIER = 89;

treelanParser.RULE_stats = 0;
treelanParser.RULE_varDecl = 1;
treelanParser.RULE_formalParameters = 2;
treelanParser.RULE_formalParameter = 3;
treelanParser.RULE_block = 4;
treelanParser.RULE_stat = 5;
treelanParser.RULE_parExpr = 6;
treelanParser.RULE_expr = 7;
treelanParser.RULE_builtinfunction = 8;
treelanParser.RULE_primary = 9;
treelanParser.RULE_exprList = 10;
treelanParser.RULE_typeType = 11;
treelanParser.RULE_literal = 12;
treelanParser.RULE_primitiveType = 13;
treelanParser.RULE_complexType = 14;

function StatsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_stats;
    return this;
}

StatsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatsContext.prototype.constructor = StatsContext;

StatsContext.prototype.varDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDeclContext);
    } else {
        return this.getTypedRuleContext(VarDeclContext,i);
    }
};

StatsContext.prototype.stat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatContext);
    } else {
        return this.getTypedRuleContext(StatContext,i);
    }
};

StatsContext.prototype.enterRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.enterStats(this);
	}
};

StatsContext.prototype.exitRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.exitStats(this);
	}
};




treelanParser.StatsContext = StatsContext;

treelanParser.prototype.stats = function() {

    var localctx = new StatsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, treelanParser.RULE_stats);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 32; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 32;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
            switch(la_) {
            case 1:
                this.state = 30;
                this.varDecl();
                break;

            case 2:
                this.state = 31;
                this.stat();
                break;

            }
            this.state = 34; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << treelanParser.BOOLEAN) | (1 << treelanParser.BYTE) | (1 << treelanParser.CHAR) | (1 << treelanParser.DOUBLE) | (1 << treelanParser.FLOAT) | (1 << treelanParser.IF) | (1 << treelanParser.INT) | (1 << treelanParser.JOIN) | (1 << treelanParser.LIST) | (1 << treelanParser.LONG) | (1 << treelanParser.NODE) | (1 << treelanParser.SHORT) | (1 << treelanParser.STRING) | (1 << treelanParser.TREE) | (1 << treelanParser.SELECT))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (treelanParser.SET - 32)) | (1 << (treelanParser.DECIMAL_LITERAL - 32)) | (1 << (treelanParser.FLOAT_LITERAL - 32)) | (1 << (treelanParser.BOOL_LITERAL - 32)) | (1 << (treelanParser.CHAR_LITERAL - 32)) | (1 << (treelanParser.STRING_LITERAL - 32)) | (1 << (treelanParser.NULL_LITERAL - 32)) | (1 << (treelanParser.LPAREN - 32)) | (1 << (treelanParser.LBRACE - 32)) | (1 << (treelanParser.BANG - 32)))) !== 0) || _la===treelanParser.SUB || _la===treelanParser.IDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VarDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_varDecl;
    return this;
}

VarDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarDeclContext.prototype.constructor = VarDeclContext;

VarDeclContext.prototype.typeType = function() {
    return this.getTypedRuleContext(TypeTypeContext,0);
};

VarDeclContext.prototype.IDENTIFIER = function() {
    return this.getToken(treelanParser.IDENTIFIER, 0);
};

VarDeclContext.prototype.ASSIGN = function() {
    return this.getToken(treelanParser.ASSIGN, 0);
};

VarDeclContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

VarDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.enterVarDecl(this);
	}
};

VarDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.exitVarDecl(this);
	}
};




treelanParser.VarDeclContext = VarDeclContext;

treelanParser.prototype.varDecl = function() {

    var localctx = new VarDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, treelanParser.RULE_varDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 36;
        this.typeType();
        this.state = 37;
        this.match(treelanParser.IDENTIFIER);
        this.state = 40;
        _la = this._input.LA(1);
        if(_la===treelanParser.ASSIGN) {
            this.state = 38;
            this.match(treelanParser.ASSIGN);
            this.state = 39;
            this.expr(0);
        }

        this.state = 42;
        this.match(treelanParser.SEMI);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FormalParametersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_formalParameters;
    return this;
}

FormalParametersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormalParametersContext.prototype.constructor = FormalParametersContext;

FormalParametersContext.prototype.formalParameter = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FormalParameterContext);
    } else {
        return this.getTypedRuleContext(FormalParameterContext,i);
    }
};

FormalParametersContext.prototype.enterRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.enterFormalParameters(this);
	}
};

FormalParametersContext.prototype.exitRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.exitFormalParameters(this);
	}
};




treelanParser.FormalParametersContext = FormalParametersContext;

treelanParser.prototype.formalParameters = function() {

    var localctx = new FormalParametersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, treelanParser.RULE_formalParameters);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 44;
        this.formalParameter();
        this.state = 49;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===treelanParser.COMMA) {
            this.state = 45;
            this.match(treelanParser.COMMA);
            this.state = 46;
            this.formalParameter();
            this.state = 51;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FormalParameterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_formalParameter;
    return this;
}

FormalParameterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormalParameterContext.prototype.constructor = FormalParameterContext;

FormalParameterContext.prototype.typeType = function() {
    return this.getTypedRuleContext(TypeTypeContext,0);
};

FormalParameterContext.prototype.IDENTIFIER = function() {
    return this.getToken(treelanParser.IDENTIFIER, 0);
};

FormalParameterContext.prototype.enterRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.enterFormalParameter(this);
	}
};

FormalParameterContext.prototype.exitRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.exitFormalParameter(this);
	}
};




treelanParser.FormalParameterContext = FormalParameterContext;

treelanParser.prototype.formalParameter = function() {

    var localctx = new FormalParameterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, treelanParser.RULE_formalParameter);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 52;
        this.typeType();
        this.state = 53;
        this.match(treelanParser.IDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.stat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatContext);
    } else {
        return this.getTypedRuleContext(StatContext,i);
    }
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.exitBlock(this);
	}
};




treelanParser.BlockContext = BlockContext;

treelanParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, treelanParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.match(treelanParser.LBRACE);
        this.state = 59;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << treelanParser.BOOLEAN) | (1 << treelanParser.BYTE) | (1 << treelanParser.CHAR) | (1 << treelanParser.DOUBLE) | (1 << treelanParser.FLOAT) | (1 << treelanParser.IF) | (1 << treelanParser.INT) | (1 << treelanParser.JOIN) | (1 << treelanParser.LIST) | (1 << treelanParser.LONG) | (1 << treelanParser.NODE) | (1 << treelanParser.SHORT) | (1 << treelanParser.STRING) | (1 << treelanParser.TREE) | (1 << treelanParser.SELECT))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (treelanParser.SET - 32)) | (1 << (treelanParser.DECIMAL_LITERAL - 32)) | (1 << (treelanParser.FLOAT_LITERAL - 32)) | (1 << (treelanParser.BOOL_LITERAL - 32)) | (1 << (treelanParser.CHAR_LITERAL - 32)) | (1 << (treelanParser.STRING_LITERAL - 32)) | (1 << (treelanParser.NULL_LITERAL - 32)) | (1 << (treelanParser.LPAREN - 32)) | (1 << (treelanParser.LBRACE - 32)) | (1 << (treelanParser.BANG - 32)))) !== 0) || _la===treelanParser.SUB || _la===treelanParser.IDENTIFIER) {
            this.state = 56;
            this.stat();
            this.state = 61;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 62;
        this.match(treelanParser.RBRACE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_stat;
    return this;
}

StatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatContext.prototype.constructor = StatContext;

StatContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

StatContext.prototype.varDecl = function() {
    return this.getTypedRuleContext(VarDeclContext,0);
};

StatContext.prototype.IF = function() {
    return this.getToken(treelanParser.IF, 0);
};

StatContext.prototype.parExpr = function() {
    return this.getTypedRuleContext(ParExprContext,0);
};

StatContext.prototype.stat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatContext);
    } else {
        return this.getTypedRuleContext(StatContext,i);
    }
};

StatContext.prototype.ELSE = function() {
    return this.getToken(treelanParser.ELSE, 0);
};

StatContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

StatContext.prototype.enterRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.enterStat(this);
	}
};

StatContext.prototype.exitRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.exitStat(this);
	}
};




treelanParser.StatContext = StatContext;

treelanParser.prototype.stat = function() {

    var localctx = new StatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, treelanParser.RULE_stat);
    try {
        this.state = 79;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 64;
            this.block();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 65;
            this.varDecl();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 66;
            this.match(treelanParser.IF);
            this.state = 67;
            this.parExpr();
            this.state = 68;
            this.stat();
            this.state = 71;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
            if(la_===1) {
                this.state = 69;
                this.match(treelanParser.ELSE);
                this.state = 70;
                this.stat();

            }
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 73;
            this.expr(0);
            this.state = 74;
            this.match(treelanParser.SEMI);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 76;
            this.varDecl();
            this.state = 77;
            this.match(treelanParser.SEMI);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_parExpr;
    return this;
}

ParExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParExprContext.prototype.constructor = ParExprContext;

ParExprContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ParExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.enterParExpr(this);
	}
};

ParExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof treelanListener ) {
        listener.exitParExpr(this);
	}
};




treelanParser.ParExprContext = ParExprContext;

treelanParser.prototype.parExpr = function() {

    var localctx = new ParExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, treelanParser.RULE_parExpr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this.match(treelanParser.LPAREN);
        this.state = 82;
        this.expr(0);
        this.state = 83;
        this.match(treelanParser.RPAREN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = treelanParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.SUB = function() {
    return this.getToken(treelanParser.SUB, 0);
};

ExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

ExprContext.prototype.BANG = function() {
    return this.getToken(treelanParser.BANG, 0);
};

ExprContext.prototype.primary = function() {
    return this.getTypedRuleContext(PrimaryContext,0);
};

ExprContext.prototype.builtinfunction = function() {
    return this.getTypedRuleContext(BuiltinfunctionContext,0);
};
